--- a/app/frontend/spagnesi/template/base/head/head.twig
+++ b/app/frontend/spagnesi/template/base/head/head.twig
@@ -14,7 +14,4 @@
 
 <body>
 
-
-<div id="outer">
-    <div id="outer-canvas">
-        {% include 'base/header/header.twig' %}
+        {% include 'base/header/'~headerPart~'.twig' %}
