--- a/app/frontend/spagnesi/template/ecommerce/checkout/parti/form-spedizione.twig
+++ b/app/frontend/spagnesi/template/ecommerce/checkout/parti/form-spedizione.twig
@@ -11,14 +11,14 @@
 
 <h2>Indirizzo di spedizione</h2>
 <div class="row">
-    <div class="col-6">
+    <div class="col-md-6">
         <div class="form-group">
             <label>Nome</label>
             <input type="text" name="spedizione[nome]" class="form-control" value="{{ indirizzoSpedizione.nome }}">
         </div>
     </div>
 
-    <div class="col-6">
+    <div class="col-md-6">
         <div class="form-group">
             <label>Cognome</label>
             <input type="text" name="spedizione[cognome]" class="form-control" value="{{ indirizzoSpedizione.cognome }}">
