--- a/app/frontend/spagnesi/template/ecommerce/scelta-variante.twig
+++ b/app/frontend/spagnesi/template/ecommerce/scelta-variante.twig
@@ -5,26 +5,21 @@
 
                     <h2>Scegli rivestimento e colore</h2>
                     {% for combinazione in combinazioni %}
-                        <form method="post" action="/carrello/aggiungi">
-
+                        <form method="post" action="/carrello/aggiungi" data-index="{{ loop.index-1 }}">
                             <input type="hidden" name="id_variante" value="{{ variante.id }}" >
                             <input type="hidden" name="quantita" value="1">
-
                             {% for valore in combinazione %}
                                 <input type="hidden" name="attributi[{{ valore.id_ecommerce_attributo }}]" value="{{ valore.id }}">
                             {% endfor %}
-
                         </form>
                     {% endfor %}
-
-
-
+                    
                     {% for combinazione in combinazioni %}
                             <label class="label-scelta-variante">
                                 <img src="/media/tessuti/{% for valore in combinazione %}attr{{ valore.id_ecommerce_attributo }}_val{{ valore.id }}{% endfor %}.jpg">
                                 <span>{% for valore in combinazione %}{{ valore.valore }} {% endfor %}</span>
-                            </label>
 
+                            </label>
                     {% endfor %}
 
                 </div>
