--- a/app/assets/css/less/header.less
+++ b/app/assets/css/less/header.less
@@ -15,9 +15,10 @@
   transition: all @headerSpeedTransition ;
   
   &.fixed,&.always-fixed{
-    background: rgba(255,255,255,0.85);
+    background: rgba(255,255,255,0.95);
     color: #000;
     padding:0;
+    border-bottom: 1px solid #ddd;
     a{
       color: #000;
     }
