--- a/app/assets/css/less/prodotto.less
+++ b/app/assets/css/less/prodotto.less
@@ -184,6 +184,10 @@
     border-radius: 5px;
     border-top-left-radius: 3em;
     border-bottom-left-radius: 3em;
+
+    &:hover{
+      box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+    }
     img{
       float: left;
       width: 3em;
@@ -232,6 +236,8 @@ body.scegliendo-variante{
   }
 }
 
+
+
 .carousel-container-preview{
   max-height: 100vh;
   overflow: hidden;
@@ -258,6 +264,82 @@ body.scegliendo-variante{
       left: 50%;
       transform: translate(-50%,-50%)
 
+    }
+  }
+}
+
+
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 51px;
+  height: 51px;
+  margin: 6px;
+  border: 6px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #9475ff  transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.card.variante{
+  .aggiunta-al-carrello{
+    display: none;
+  }
+}
+.card.variante.loading{
+
+
+
+  .aggiunta-al-carrello{
+    content: '';
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #fff;
+    z-index: 90;
+    display: inline-block;
+    position: absolute;
+     left: 50%;
+     top: 50%;
+     z-index: 99;
+     transform: translate(-50%,-50%);
+      align-items: center;
+      justify-content: center;
+      justify-items: center;
+      display: flex;
+      flex-direction: column;
+
+    span{
+      font-weight: bold;
+      font-size: 2em;
     }
   }
 }
