--- a/app/assets/css/style.less
+++ b/app/assets/css/style.less
@@ -1,10 +1,17 @@
 @colorMain : #ce4d4d;
 
+html{
+  height: 100%;
+}
 body,html{
   font-family: 'Montserrat', sans-serif;
   font-size:12px;
+  min-height: 100%;
+  margin:0;
+  padding:0;
 
 }
+
 img{
   max-width: 100%;
 }
@@ -64,3 +71,4 @@ h2 {
 @import "less/search-bar";
 @import "less/prodotto";
 @import "less/carrello";
+@import "less/checkout";
