--- a/app/frontend/spagnesi/template/ecommerce/checkout/parti/form-registrazione.twig
+++ b/app/frontend/spagnesi/template/ecommerce/checkout/parti/form-registrazione.twig
@@ -4,14 +4,6 @@
         <label>Email</label>
         <input type="text" name="email" class="form-control">
     </div>
-
-
-    <div class="form-group">
-        <label>Password</label>
-        <input type="text" name="password" class="form-control">
-    </div>
-
-
     <div class="form-group">
         <label>Nome</label>
         <input type="text" name="nome" class="form-control">
@@ -22,6 +14,11 @@
         <input type="text" name="cognome" class="form-control">
     </div>
 
+    <div class="form-group">
+        <label>Password</label>
+        <input type="text" name="password" class="form-control">
+        <small>Ti servirà per accedere al tuo profilo e per il tracking dell'ordine</small>
+    </div>
 
-    <input type="submit" value="Salva">
+    <input type="submit" value="Salva e procedi" class="btn btn-secondary btn-block" >
 </form>
