--- a/app/frontend/spagnesi/template/ecommerce/checkout/spedizione.twig
+++ b/app/frontend/spagnesi/template/ecommerce/checkout/spedizione.twig
@@ -1,7 +1,8 @@
 {% extends "base/template.twig" %}
 
 {% block content %}
-    <main style="padding-top: 200px">
+    <main class="checkout">
+        {% include "ecommerce/checkout/parti/steps.twig" %}
         <div class="container">
             <div class="row">
                 <div class="col">
