--- a/app/frontend/spagnesi/template/base/footer/footer.twig
+++ b/app/frontend/spagnesi/template/base/footer/footer.twig
@@ -7,59 +7,65 @@
                 <!--<div class="arrow link hidden-xs hidden-sm">
                   <i class="icon flaticon-down14"></i>
                 </div>-->
-                <div class="collapsed-block">
-                    <div class="inside">
-                        <h3><span class="link">Su di noi</span><a class="expander visible-sm visible-xs" href="#TabBlock-2">+</a></h3>
-                        <div class="tabBlock" id="TabBlock-2">
-                            <ul class="menu">
-                                <li><a href="/chi-siamo">Chi siamo</a></li>
-                                <li><a href="/termini-e-condizioni">Termini e condizioni</a></li>
-                                <li><a href="/sicurezza-e-privacy">Sicurezza e privacy</a></li>
-                                <li><a href="/contatti">Contatti</a></li>
-                            </ul>
+                <div class="row">
+                    <div class="col-12 col-md-3">
+                        <div class="inside logofooter">
+                            <a href="/">
+                                <img class="logo" src="/assets/img/logo/logo-footer-black.png" alt="DivaniLab">
+                            </a>
+                            <div class="socialicons">
+                                <a href="#" title="Seguici su Facebook" target="_blank" class="mr-5"><span class="fab fa-facebook fa-2x"></span></a>
+                                <a href="#" title="Seguici su Instagram" target="_blank" class="mr-5"><span class="fab fa-instagram fa-2x"></span></a>
+                                <a href="#" title="Seguici su YouTube" target="_blank" class="mr-5"><span class="fab fa-youtube fa-2x"></span></a>
+                                <a href="#" title="Seguici su LinkedIn" target="_blank" class="mr-5"><span class="fab fa-linkedin fa-2x"></span></a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="collapsed-block">
-                    <div class="inside">
-                        <h3><span class="link">Il tuo ordine</span><a class="expander visible-sm visible-xs" href="#TabBlock-3">+</a></h3>
-                        <div class="tabBlock" id="TabBlock-3">
-                            <ul class="menu">
-                                <li><a href="/come-funziona">Come funziona</a></li>
-                                <li><a href="/metodi-di-pagamento">Metodi di pagamento</a></li>
-                                <li><a href="/resi-e-recessi">Resi e recessi</a></li>
-                                <li><a href="/faq">Help & FAQs</a></li>
-
-                            </ul>
+                    <div class="col-12 col-md-3">
+                        <div class="inside">
+                            <h3><span class="link">DIVANI LAB</span></h3>
+                            <div class="tabBlock" id="TabBlock-1">
+                                <ul class="menu">
+                                    <li><a href="#">Chi Siamo</a></li>
+                                    <li><a href="#">Qualità Artigianale</a></li>
+                                    <li><a href="#">Dove Siamo</a></li>
+                                    <li><a href="#">Contattaci</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="collapsed-block">
-                    <div class="inside">
-                        <h3><span class="link">SERVIZI AGGIUNTIVI</span><a class="expander visible-sm visible-xs" href="#TabBlock-4">+</a></h3>
-                        <div class="tabBlock" id="TabBlock-4">
-                            <ul class="menu">
-                                <li><a href="/campione-gratuito">Campione gratuito</a></li>
-                                <li><a href="/collabora-con-noi">Collabora con noi</a></li>
-                                <li><a href="/personalizzazione">Personalizzazione</a></li>
+                    <div class="col-12 col-md-3">
+                        <div class="inside">
+                            <h3><span class="link">GUIDA AI PRODOTTI</span></h3>
+                            <div class="tabBlock" id="TabBlock-2">
+                                <ul class="menu">
+                                    <li><a href="/campione-gratuito">Nuova Collezione</a></li>
+                                    <li><a href="/collabora-con-noi">Outlet &amp; Pronta Consegna</a></li>
+                                    <li><a href="/personalizzazione">Rivestimenti in Pelle</a></li>
+                                    <li><a href="/personalizzazione">Rivestimenti in Eco-Pelle</a></li>
+                                    <li><a href="/personalizzazione">Rivestimenti in Tessuto</a></li>
 
-                            </ul>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="collapsed-block">
-                    <div class="inside">
-                        <h3><span class="link">Trovaci online</span><a class="expander visible-sm visible-xs" href="#TabBlock-5">+</a></h3>
-                        <div class="tabBlock" id="TabBlock-5">
-                            <ul class="socials socials-lg">
-                                <li><a href="https://www.facebook.com/partecipazionimatrimonicerimonie/" target="_blank"><span class="icon flaticon-facebook12"></span></a></li>
+                    <div class="col-12 col-md-3">
+                        <div class="inside">
+                            <h3><span class="link">SPEDIZIONI &amp; CONDIZIONI</span></h3>
+                            <div class="tabBlock" id="TabBlock-3">
+                                <ul class="menu">
+                                    <li><a href="/campione-gratuito">Condizioni di Vendita</a></li>
+                                    <li><a href="/collabora-con-noi">Tempi di Spedizione</a></li>
+                                    <li><a href="/personalizzazione">Modalità di Consegna</a></li>
+                                    <li><a href="/personalizzazione">Diritto di Recesso</a></li>
 
-                            </ul>
-                            <div class="divider divider-sm visible-xs visible-sm">
+                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
+
+
                 <!-- <div class="collapsed-block">
                    <div class="inside">
                      <h3> </h3>
@@ -80,22 +86,22 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 copyright">
-                        © 2017 <a href="#">Cartiamo</a>. All Rights Reserved.
+                        © 2017 <a href="#">Divani lab</a>. All Rights Reserved.
                     </div>
                     <div class="col-md-4">
                         <ul class="payment-list pull-right">
-                            <li><img src="images/icon-payment-01.png" width="36" height="22" alt=""></li>
-                            <li><img src="images/icon-payment-02.png" width="36" height="22" alt=""></li>
-                            <li><img src="images/icon-payment-03.png" width="36" height="22" alt=""></li>
-                            <li><img src="images/icon-payment-04.png" width="36" height="22" alt=""></li>
-                            <li><img src="images/icon-payment-05.png" width="36" height="22" alt=""></li>
+                            <li><img src="/assets/images/icon-payment-01.png" width="36" height="22" alt=""></li>
+                            <li><img src="/assets/images/icon-payment-02.png" width="36" height="22" alt=""></li>
+                            <li><img src="/assets/images/icon-payment-03.png" width="36" height="22" alt=""></li>
+                            <li><img src="/assets/images/icon-payment-04.png" width="36" height="22" alt=""></li>
+                            <li><img src="/assets/images/icon-payment-05.png" width="36" height="22" alt=""></li>
                         </ul>
                     </div>
                 </div>
             </div>
 
 
-            <div class="container">
+            <div class="container aiosafooter">
                 <a title="web-design aiosa web agency" href="https://aiosa.net">web-design</a> by Web Agency <a id="madebyaiosa" title="Web Agency Pistoia" href="https://aiosa.net">Aiosa</a>
 
 
