--- a/app/frontend/cartiamo/template/base/footer/footer.twig
+++ b/app/frontend/cartiamo/template/base/footer/footer.twig
@@ -7,59 +7,63 @@
                 <!--<div class="arrow link hidden-xs hidden-sm">
                   <i class="icon flaticon-down14"></i>
                 </div>-->
-                <div class="collapsed-block">
-                    <div class="inside">
-                        <h3><span class="link">Su di noi</span><a class="expander visible-sm visible-xs" href="#TabBlock-2">+</a></h3>
-                        <div class="tabBlock" id="TabBlock-2">
-                            <ul class="menu">
-                                <li><a href="/chi-siamo">Chi siamo</a></li>
-                                <li><a href="/termini-e-condizioni">Termini e condizioni</a></li>
-                                <li><a href="/sicurezza-e-privacy">Sicurezza e privacy</a></li>
-                                <li><a href="/contatti">Contatti</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="collapsed-block">
-                    <div class="inside">
-                        <h3><span class="link">Il tuo ordine</span><a class="expander visible-sm visible-xs" href="#TabBlock-3">+</a></h3>
-                        <div class="tabBlock" id="TabBlock-3">
-                            <ul class="menu">
-                                <li><a href="/come-funziona">Come funziona</a></li>
-                                <li><a href="/metodi-di-pagamento">Metodi di pagamento</a></li>
-                                <li><a href="/resi-e-recessi">Resi e recessi</a></li>
-                                <li><a href="/faq">Help & FAQs</a></li>
+                
+                <div class="row">
+	                <div class="col-12 col-md-3">
+	                    <div class="inside">
+	                        <h3><span class="link">Su di noi</span><a class="expander visible-sm visible-xs" href="#TabBlock-2">+</a></h3>
+	                        <div class="tabBlock" id="TabBlock-2">
+	                            <ul class="menu">
+	                                <li><a href="/chi-siamo">Chi siamo</a></li>
+	                                <li><a href="/termini-e-condizioni">Termini e condizioni</a></li>
+	                                <li><a href="/sicurezza-e-privacy">Sicurezza e privacy</a></li>
+	                                <li><a href="/contatti">Contatti</a></li>
+	                            </ul>
+	                        </div>
+	                    </div>
+	                </div>
+	                <div class="col-12 col-md-3">
+	                    <div class="inside">
+	                        <h3><span class="link">Il tuo ordine</span><a class="expander visible-sm visible-xs" href="#TabBlock-3">+</a></h3>
+	                        <div class="tabBlock" id="TabBlock-3">
+	                            <ul class="menu">
+	                                <li><a href="/come-funziona">Come funziona</a></li>
+	                                <li><a href="/metodi-di-pagamento">Metodi di pagamento</a></li>
+	                                <li><a href="/resi-e-recessi">Resi e recessi</a></li>
+	                                <li><a href="/faq">Help & FAQs</a></li>
 
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="collapsed-block">
-                    <div class="inside">
-                        <h3><span class="link">SERVIZI AGGIUNTIVI</span><a class="expander visible-sm visible-xs" href="#TabBlock-4">+</a></h3>
-                        <div class="tabBlock" id="TabBlock-4">
-                            <ul class="menu">
-                                <li><a href="/campione-gratuito">Campione gratuito</a></li>
-                                <li><a href="/collabora-con-noi">Collabora con noi</a></li>
-                                <li><a href="/personalizzazione">Personalizzazione</a></li>
+	                            </ul>
+	                        </div>
+	                    </div>
+	                </div>
+	                <div class="col-12 col-md-3">
+	                    <div class="inside">
+	                        <h3><span class="link">SERVIZI AGGIUNTIVI</span><a class="expander visible-sm visible-xs" href="#TabBlock-4">+</a></h3>
+	                        <div class="tabBlock" id="TabBlock-4">
+	                            <ul class="menu">
+	                                <li><a href="/campione-gratuito">Campione gratuito</a></li>
+	                                <li><a href="/collabora-con-noi">Collabora con noi</a></li>
+	                                <li><a href="/personalizzazione">Personalizzazione</a></li>
 
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="collapsed-block">
-                    <div class="inside">
-                        <h3><span class="link">Trovaci online</span><a class="expander visible-sm visible-xs" href="#TabBlock-5">+</a></h3>
-                        <div class="tabBlock" id="TabBlock-5">
-                            <ul class="socials socials-lg">
-                                <li><a href="https://www.facebook.com/partecipazionimatrimonicerimonie/" target="_blank"><span class="icon flaticon-facebook12"></span></a></li>
+	                            </ul>
+	                        </div>
+	                    </div>
+	                </div>
+	                <div class="col-12 col-md-3">
+	                    <div class="inside">
+	                        <h3><span class="link">Trovaci online</span><a class="expander visible-sm visible-xs" href="#TabBlock-5">+</a></h3>
+	                        <div class="tabBlock" id="TabBlock-5">
+	                            <ul class="socials socials-lg">
+	                                <li><a href="https://www.facebook.com/partecipazionimatrimonicerimonie/" target="_blank"><span class="icon flaticon-facebook12"></span></a></li>
 
-                            </ul>
-                            <div class="divider divider-sm visible-xs visible-sm">
-                            </div>
-                        </div>
-                    </div>
-                </div>
+	                            </ul>
+	                            <div class="divider divider-sm visible-xs visible-sm">
+	                            </div>
+	                        </div>
+	                    </div>
+	                </div>
+	            </div>
+
                 <!-- <div class="collapsed-block">
                    <div class="inside">
                      <h3> </h3>
