--- a/app/frontend/spagnesi/template/base/header/header.twig
+++ b/app/frontend/spagnesi/template/base/header/header.twig
@@ -16,8 +16,8 @@
                         </nav>
 
                         <a href="/">
-                            <img class="logo" src="/assets/img/logo/logo-white.png" alt="Cartiamo">
-                            <img class="logo logo-black" src="/assets/img/logo/logo-black.png" alt="Cartiamo">
+                            <img class="logo" src="/assets/img/logo/logo-white.png" alt="DivaniLab">
+                            <img class="logo logo-black" src="/assets/img/logo/logo-black.png" alt="DivaniLab">
                         </a>
 
                         <nav>
