--- a/app/frontend/spagnesi/template/ecommerce/carrello.twig
+++ b/app/frontend/spagnesi/template/ecommerce/carrello.twig
@@ -3,10 +3,20 @@
 {% block content %}
     <main style="padding-top: 150px">
         <div class="container">
+
+
             <div class="row">
                 <div class="col-8">
                     <h2>Prodotti presenti nel carrello</h2>
 
+                    <div class="alert alert-dark">
+
+                        {{ params.msg }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+
+                    </div>
 
                     {% for lineitem in carrello.lineitems %}
                         <div class="card mb-3">
@@ -59,7 +69,20 @@
                 </div>
 
                 <div class="col-4 pt-2">
-                    <div class="card mt-5 p-5">
+                    {% if not carrello.coupon %}
+                    <div class="card mt-5 p-2 bg-light">
+
+                        <div class="card-body">
+                            <h3>Hai un coupon?</h3>
+                            <form action="{{ router_service.getRoute("frontend.ecommerce.aggiungicoupon").build() }}" method="post">
+                                <span>Inserisci il codice coupon per ottenere uno sconto</span>
+                                <input type="text" class="form-control p-2" placeholder="Inserisci qui il codice coupon" name="coupon">
+                                <button class="btn btn-secondary btn-block">Salva coupon</button>
+                            </form>
+                        </div>
+                    </div>
+                    {% endif %}
+                    <div class="card mt-5 p-2">
                         <div class="card-body">
                             <h3>Riepilogo</h3>
                         </div>
